services/listener-go/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: listener
  namespace: prod-exchange
spec:
  selector: {app: listener}
  ports:
  - name: http
    port: 8080
